welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:19: error: illegal start of simple expression
	while (!sortieTrouvee());
                                ^Poucet:26: error: 'while' expected but '}' found.
	}
        ^